--- a/database.yml
+++ b/database.yml
@@ -5,7 +5,7 @@ development:
   host: "localhost"
   port: "3306"
   user: "root"
-  password: "root"
+  password: {{envOr "DATABASE_PASSWORD" ""}}
 
 test:
   dialect: "mysql"
@@ -21,7 +21,7 @@ test:
   host: "localhost"
   port: "3306"
   user: "root"
-  password: "root"
+  password: {{envOr "DATABASE_PASSWORD" ""}}
 
 production:
   #
@@ -32,9 +32,9 @@ production:
   dialect: "mysql"
   database: "aichat_golang_production"
   host: {{envOr "DATABASE_HOST" "localhost"}}
-  port: {{envOr "DATABASE_PORT" "3306"}}
-  user: {{envOr "DATABASE_USER" "root"}}
-  password: {{envOr "DATABASE_PASSWORD" "root"}}
+  port: "3306"
+  user: "root"
+  password: {{envOr "DATABASE_PASSWORD" ""}}
   #
   # And you can also override connection parameters by setting it under options.
   #
